--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/BP/Map/NewMap.NewMap
 EditorStartupMap=/Game/BP/Map/NewMap.NewMap
+GlobalDefaultGameMode=/Game/BP/NewBlueprint.NewBlueprint_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
