--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,6 +51,8 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DistanceFields.DefaultVoxelDensity=0.400000
 r.Nanite.ProjectEnabled=False
+r.DefaultFeature.AutoExposure=False
+r.AntiAliasingMethod=3
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
