--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/BP/Map/NewMap.NewMap
 EditorStartupMap=/Game/BP/Map/NewMap.NewMap
-GlobalDefaultGameMode=/Game/BP/NewBlueprint.NewBlueprint_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
