--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -65,6 +65,8 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/GAMEJAM_YNOV")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/GAMEJAM_YNOV")
+bUseFixedFrameRate=True
+FixedFrameRate=80.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
