--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,7 +2,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A7E697634584DC7CC928658BDF9E9188
+ProjectName=Micro Bubbles
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "0054B2B44332786E37E2899F836FA5DC", "Micro Bubbles")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
