--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/BP/Map/NewMap.NewMap
 EditorStartupMap=/Game/BP/Map/NewMap.NewMap
-GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=/Game/BP/BP_Gamemode.BP_Gamemode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
